--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
     "name": "sandbox",
     "version": "1.0.0",
     "scripts": {
-      "start": "concurrently \"npm run start --prefix backend\" \"npm run start --prefix frontend\"",
-      "install:all": "npm install --prefix backend && npm install --prefix frontend"
+        "start": "concurrently \"npm run start --prefix backend\" \"npm run start --prefix frontend\"",
+        "install:all": "npm install --prefix backend && npm install --prefix frontend"
     },
     "devDependencies": {
-      "concurrently": "^6.0.0"
+        "concurrently": "^6.0.0"
+    },
+    "dependencies": {
+        "react-modal": "^3.16.1"
     }
-  }
-  
+}
