--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,11 @@
+
 PORT=5000
-DB_URL=mongodb://localhost:27017/EcomDb
-DB_TEST_URL=mongodb://localhost:27017/EcomDb_test
+DB_URL=mongodb+srv://sandboxpedia:vHgJP7Oe0tKDheDz@cluster0.ewjjqtl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_TEST_URL=mongodb://localhost:27017
 ALLOW_ORIGIN=*
 MAILGUN_USER=your-mailgun-user
-MAILGUN_PASSWORD=your-mailgun-password
+MAILGUN_PASSWORD=sSmalKk@369369MAILGUN_PASSWORD=sSmalKk@369369
+MAILGUN_API_KEY = 52444fb1e970268daf708d5953a7aae1-fe9cf0a8-08c4bd87
+DOMAIN = sandbox3c3b674a552346a1b9d9db9fdc3bc1ad.mailgun.org
+user = sandboxpedia
+pass= sadbe21830213!@NB@SDG*)!M)M<_!@
