--- a/backend/.env.docker
+++ b/backend/.env.docker
@@ -1,4 +1,4 @@
 PORT=5000
-DB_URL=mongodb://mongodb:27017/EcomDb
-DB_TEST_URL=mongodb://mongodb:27017/EcomDb
+DB_URL=mongodb://mongodb:27017/Dhiwise
+DB_TEST_URL=mongodb://mongodb:27017/Dhiwise
 ALLOW_ORIGIN=*
