--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-modal": "^3.16.1",
     "react-range": "^1.8.14",
     "react-router-dom": "6.0.2",
     "react-router-hash-link": "^2.4.3",
