--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/google.maps": "^3.51.1",
     "@types/node": "^18.11.18",
     "@types/react": "^17.0.52",
