--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=http://localhost:5000
+REACT_APP_API_URL=https://ea3298-base-sandbox.dhiwise.co
 JWT=myjwtclientsecret
 REACT_APP_GOOGLE_MAP_ID=your_google_map_id
